@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class FileQueryGenerator extends QueryGenerator {
 
@@ -18,7 +19,7 @@ public class FileQueryGenerator extends QueryGenerator {
 		List<ExecutionQuery> result = super.get(allCommands);
 		result = result.stream()
 			.map(q -> new ExecutionQuery(q.command, q.params, this))
-			.toList();
+			.collect(Collectors.toList());
 		return result;
 	}
 
